# file_etl

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  config.py  docker-compose.yml  functions.py  pyproject.toml  report.py  requirements.txt  script.py  storage.py  validation.py
api/: main.py
bot/: telegram_bot.py
config/: __init__.py  base.py  dev.py  loader.py  prod.py
core/: application.py  storage_result.py  validation_result.py
logs/: logs.py
report/: console_reporter.py  console_reporter_json.py
sql/queries/: 010_insert_staging.sql.psycopg  020_insert_employees.sql  030_count_statistics.sql
sql/schema/: 001_create_employees.sql  002_create_staging_employees.sql  003_truncate_staging.sql
storage/: postgres.py  sqlite.py
tests/: conftest.py
tests/integration/: test_app_errors.py  test_app_success.py
tests/unit/: test_config.py  test_validation_errors.py  test_validation_invalid_file.py
tests/unit/storage/: test_storage_errors.py  test_storage_success.py
tests/unit/validation/: test_validation_errors.py  test_validation_invalid_file.py  test_validation_valid_file.py
validation/: validator.py
