[project]
name = "file_etl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3",
    "python-dateutil",
    "pytz",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pandas-stubs",
    "types-pytz",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint.per-file-ignores]
"config/dev.py" = ["F403"]
"config/prod.py" = ["F403"]

[tool.pytest.ini_options]
pythonpath = ["."]