[project]
name = 'file_etl'
version = '0.1.0'
requires-python = '>= 3.12'

[project.dependencies]
sqlalchemy = "^2.0"
psycopg = { extras = ["binary"], version = "^3.1" }


[tool.pytest.ini_options]
pythonpath = ['.']

[tool.ruff.lint.per-file-ignores]
"config/dev.py" = ["F403"]
"config/prod.py" = ["F403"]
